<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <!--name 'traffic-ext' is already in use-->
    <artifactId>module-traffic-fg</artifactId>
    <packaging>jar</packaging>
    <version>1.0.0-SNAPSHOT</version>
    <name>traffic-fg</name>

    <parent>
        <groupId>de.yard.tcp-flightgear</groupId>
        <artifactId>main</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <dependencies>
        <!-- junit comes from parent -->
        <!-- own project dependencies-->
        <dependency>
            <groupId>de.yard.tcp-22</groupId>
            <artifactId>module-core</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>de.yard.tcp-22</groupId>
            <artifactId>module-engine</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>de.yard.tcp-22</groupId>
            <artifactId>module-traffic-core</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>de.yard.tcp-22</groupId>
            <artifactId>module-traffic</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>de.yard.tcp-22</groupId>
            <artifactId>module-traffic</artifactId>
            <version>1.0.0-SNAPSHOT</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>de.yard.tcp-22</groupId>
            <artifactId>module-core</artifactId>
            <version>1.0.0-SNAPSHOT</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>de.yard.tcp-22</groupId>
            <artifactId>module-engine</artifactId>
            <version>1.0.0-SNAPSHOT</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>de.yard.tcp-22</groupId>
            <artifactId>module-graph</artifactId>
            <version>1.0.0-SNAPSHOT</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <!-- 5.7.21 Tests need an implemented platform (and ConfigurationByEnv for HOSTDIR)  -->
        <dependency>
            <groupId>de.yard.tcp-22</groupId>
            <artifactId>module-java-common</artifactId>
            <version>1.0.0-SNAPSHOT</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>de.yard.tcp-flightgear</groupId>
            <artifactId>module-flightgear</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>de.yard.tcp-flightgear</groupId>
            <artifactId>module-flightgear</artifactId>
            <version>1.0.0-SNAPSHOT</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.20</version>
            <!-- provided because its not needed during runtime, only for tests!-->
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- "surefire", "source" and "jar"(for tests.jar) come from parent-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>

